# p2pmessage-zome

./:  Cargo.toml  .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.circleci/: config.yml
.github/workflows/: main.yml
example-dna/: Cargo.toml
example-dna/example-dna.dna.workdir/: dna.json
example-dna/tests/: package-lock.json  package.json  tsconfig.json
example-dna/tests/src/: index.ts  message.ts
example-dna/zomes/message/: Cargo.toml  src
src/: lib.rs
zome/: .hc  Cargo.toml  README.md  p2pmessage
zome/commons/file_types/: Cargo.toml
zome/commons/file_types/src/: lib.rs
zome/happ/: .hc  happ.yaml  p2pmessage.happ
zome/p2pmessage.dna.workdir/: dna.json  p2pmessage.dna
zome/p2pmessage.workdir.dna/: dna.yaml  p2pmessage.dna
zome/tests/: package-lock.json  package.json  tsconfig.json
zome/tests-v2/: package-lock.json  package.json
zome/tests-v2/src/: index.ts
zome/tests/src/: index.ts  types.ts  utils.ts
zome/tests/src/getters/: index.ts
zome/tests/src/jumps/: index.ts
zome/tests/src/messaging/: index.ts
zome/tests/src/pin/: index.ts
zome/tests/src/playground/: index.ts
zome/tests/src/receipts/: index.ts
zome/tests/src/signals/: index.ts
zome/workdir/dna/: dna.yaml  p2pmessage.dna
zome/workdir/happ/: happ.yaml  p2pmessage.happ
zome/zomes/p2pmessage/: Cargo.toml
zome/zomes/p2pmessage/coordinator/: Cargo.toml
zome/zomes/p2pmessage/coordinator/src/: lib.rs
zome/zomes/p2pmessage/coordinator/src/entries/: message.rs
zome/zomes/p2pmessage/coordinator/src/entries/message/: commit_message_to_receiver_chain.rs  commit_receipt_to_sender_chain.rs  get_adjacent_messages.rs  get_file_bytes.rs  get_latest_messages.rs  get_messages_by_agent_by_timestamp.rs  get_next_messages.rs  get_pinned_messages.rs  get_previous_messages.rs  helpers.rs  init.rs  pin_message.rs  read_message.rs  receive_message.rs  receive_receipt.rs  send_message.rs  send_message_with_timestamp.rs  sync_pins.rs  typing.rs  utils.rs
zome/zomes/p2pmessage/integrity/: Cargo.toml
zome/zomes/p2pmessage/integrity/src/: lib.rs
zome/zomes/p2pmessage/src/: lib.rs  utils.rs
zome/zomes/p2pmessage/src/entries/: message.rs  system_message.rs
zome/zomes/p2pmessage/src/entries/message/: commit_message_to_receiver_chain.rs  commit_receipt_to_sender_chain.rs  get_adjacent_messages.rs  get_file_bytes.rs  get_latest_messages.rs  get_messages_by_agent_by_timestamp.rs  get_messages_links.rs  get_next_batch_messages.rs  get_next_messages.rs  get_pinned_messages.rs  get_previous_messages.rs  handlers.rs  helpers.rs  init.rs  is_user_blocked.rs  pin_message.rs  read_message.rs  receive_message.rs  receive_read_receipt.rs  receive_receipt.rs  send_message.rs  send_message_with_timestamp.rs  sync_pins.rs  typing.rs
zome/zomes/p2pmessage/src/entries/system_message/: announce.rs  commit_system_message_to_receiver_chain.rs  helpers.rs  receive_system_message.rs
zome/zomes/p2pmessage/types/coordinator_types/: Cargo.toml
zome/zomes/p2pmessage/types/coordinator_types/src/: lib.rs
zome/zomes/p2pmessage/types/integrity_types/: Cargo.toml
zome/zomes/p2pmessage/types/integrity_types/src/: lib.rs
