[workspace]
members = [
  "zome/zomes/p2pmessage/integrity",
  "zome/zomes/p2pmessage/coordinator",
  "zome/zomes/p2pmessage/types/coordinator_types",
  "zome/zomes/p2pmessage/types/integrity_types",
]

[workspace.dependencies]
hdi = "0.2.3"
hdk = "0.1.3"
serde = "1"
holochain = "0.1.5"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
