[package]
name = "file_types"
version = "0.0.1"
description = "types related to file used both for p2pmessage and group zomes."
authors = ["Tatsuya Sato <tatsuya_sato@yumeville.com>"]
edition = "2018"

[lib]
name = "file_types"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0.99.16"
serde = "1.0.123"
holo_hash = {version = "0.0.6", features = ["encoding"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "3503b38abf4196ee8b21ba09c7a4e348794ce4d4", package = "hdk", version = "0.0.106"}
