[package]
name = "file_types"
version = "0.0.1"
description = "types related to file used both for p2pmessage and group zomes."
authors = ["Tatsuya Sato <tatsuya_sato@yumeville.com>"]
edition = "2018"

[lib]
name = "file_types"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
derive_more = "0.99.16"
serde = "1.0.123"
hdk = "0.0.112"
holo_hash = {version = "0.0.10", features = ["encoding"]}

