[package]
name = "p2pmessage"
version = "0.0.1"
authors = ["hcij"]
edition = "2018"

[lib]
name = "p2pmessage"
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0"
serde = "1"
hdk = {git = "https://github.com/holochain/holochain", rev = "363af6d8af8d18e4616f6aa56ad4d1f0fabaafb7", package = "hdk", version = "0.0.101-alpha.0"}
file_types = { path = "../../commons/file_types", version="0.0.1"}
