[package]
name = "p2pmessage"
version = "0.0.1"
authors = ["hcij"]
edition = "2018"

[lib]
name = "p2pmessage"
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0"
serde = "1"
hdk = {git = "https://github.com/holochain/holochain", rev = "ce56118245b88f41e9a1ce246108fa03f718533e", package = "hdk", version = "0.0.103"}
file_types = { path = "../../commons/file_types", version="0.0.1"}
