[package]
name = "p2pmessage"
version = "0.0.1"
authors = ["hcij"]
edition = "2018"

[lib]
name = "p2pmessage"
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0"
serde = "1"
holo_hash = {version = "0.0.6", features = ["encoding"]}
hdk = {git = "https://github.com/holochain/holochain", rev = "070cfe5e70d7bc2e2d08921905e9f337bb0123b3", package = "hdk", version = "0.0.106"}
file_types = { path = "../../commons/file_types", version="0.0.1"}
