[package]
authors = ["nickolie.pangarungan@gmail.com", "tatsuya.g.sato@yumeville.com"]
description = "Coordinator for p2pmessage zome"
edition = "2021"
license = "MIT"
name = "p2pmessage_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "p2pmessage_coordinator"

[dependencies]
derive_more = "0"
serde = "1"

p2pmessage_integrity = {path = "../integrity"}
p2pmessage_integrity_types = {path = "../types/integrity_types"}
p2pmessage_coordinator_types = {path = "../types/coordinator_types"}
hdk = "0.0.142"
